--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ MONGO_URI="mongodb://localhost:27017/user_management_system"
 CLOUDINARY_CLOUD_NAME="xxxx"
 CLOUDINARY_API_KEY="xxxx"
 CLOUDINARY_API_SECRET="xxxx"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+JWT_SECRET="xxxx"
